--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
+<!DOCTYPE html>
+<html lang="pt-br" class="ligh">
 
+<head>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+
+    <title>Document</title>
+
+</head>
+
+<body>
+
+    <div id="container">
+        <div id="profile">
+            <img src="https://github.com/Coutogabriell.png" alt="Profile Image">
+            <p>Gabriel Couto</p>
+        </div>
+
+        <div id="switch" onclick="toggleMode()">
+            <button></button>
+            <span></span>
+        </div>
+
+        <ul>
+            <li>
+                <a href="#" target="_blank">Acesse meu portfólio</a>
+            </li>
+            <li>
+                <a href="#" target="_blank">Veja meu Currículo</a>
+            </li>
+        </ul>
+
+        <div id="social-links">
+            <a href="https://github.com/Coutogabriell" target="_blank">
+                <ion-icon name="logo-github"></ion-icon>
+            </a>
+            <a href="#" target="_blank">
+                <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+            <a href="#" target="_blank">
+                <ion-icon name="logo-linkedin"></ion-icon>
+            </a>
+        </div>
+        <footer>
+            Desenvolvido por <a href="#">Gabriel C.</a>
+        </footer>
+    </div>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+    <script src="./script.js"></script>
+</body>
+
+</html>
