--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
             <a href="https://github.com/Coutogabriell" target="_blank">
                 <ion-icon name="logo-github"></ion-icon>
             </a>
-            <a href="#" target="_blank">
+            <a href="https://www.instagram.com/coutogabriell/" target="_blank">
                 <ion-icon name="logo-instagram"></ion-icon>
             </a>
-            <a href="#" target="_blank">
+            <a href="https://www.linkedin.com/in/gabriel-couto-515272214/" target="_blank">
                 <ion-icon name="logo-linkedin"></ion-icon>
             </a>
         </div>
